--- a/0.1.md
+++ b/0.1.md
@@ -223,3 +223,10 @@ gc是Go语言的官方编译器。5g、6g和8g分别是gc编译器在x86（32bit
 5l、6l和8l分别是在x86（32bit）计算架构、x86-64（64bit）计算架构和ARM计算架构的计算机上的链接器。
 
 顺便提一下，Go语言的专用环境变量GOARCH对应于x86（32bit）计算架构、x86-64（64bit）计算架构和ARM计算架构的值分别为386、amd64和arm。 
+
+
+
+## links  
+  * [目录](catalog.md)
+  * 上一节: [标准命令详解](0.0.md)
+  * 下一节: [go install](0.2.md)
