--- a/0.11.md
+++ b/0.11.md
@@ -1447,3 +1447,10 @@ _表0-19 格式化字符串中动词的格式要求_
 如果标记``-asmdecl```有效（标记值不为```false```），那么命令程序会对汇编语言的源码文件进行检查。对汇编语言源码文件及相应编写规则的解读已经超出了本书的范围，所以我们并不在这里对此项检查进行描述。如果读者有兴趣的话，可以查看此项检查的程序的源码文件asmdecl.go。它在Go语言安装目录的子目录src/cmd/vet下。
 
 至此，我们对```go vet```命令和```go tool vet```命令进行了全面详细的介绍。之所以花费如此大的篇幅来介绍这两个命令，不仅仅是为了介绍此命令的使用方法，更是因为此命令程序的检查工作涉及到了很多我们在编写Go语言代码时需要避免的“坑”。由此我们也可以知晓应该怎样正确的编写Go语言代码。同时，我们也应该在开发Go语言程序的过程中经常使用```go tool vet```命来检查代码。 
+
+
+
+  ## links  
+  * [目录](catalog.md)
+  * 上一节: [go fix与go tool fix](0.10.md)
+  * 下一节: [go tool pprof](0.12.md)
