--- a/0.12.md
+++ b/0.12.md
@@ -790,3 +790,10 @@ _图0-4 使用kcachegrind工具查看概要数据_
 在本小节中，我们只使用```go tool pprof```命令对CPU概要文件进行了查看和分析。读者可以试着对内存概要文件和程序阻塞概要文件进行分析。
 
 相对于普通的编程方式来讲，并发编程都是复杂的。所以，我们就更需要像pprof这样的工具为我们保驾护航。大家可以将本小节当作一篇该工具的文档，并在需要时随时查看。
+
+
+
+  ## links  
+  * [目录](catalog.md)
+  * 上一节: [go vet与go tool vet](0.11.md)
+  * 下一节: [go tool cgo](0.13.md)
