--- a/0.2.md
+++ b/0.2.md
@@ -158,3 +158,10 @@
 而且，在我们为环境变量GOBIN设置了正确的值之后，这个错误提示信息仍然会出现。这是因为，只有在安装命令源码文件的时候，命令程序才会将环境变量GOBIN的值作为结果文件的存放目录。而在安装库源码文件时，在命令程序内部的代表结果文件存放目录路径的变量不会被赋值。最后，命令程序会发现它依然是个无效的空值。所以，命令程序会同样返回一个关于“无安装位置”的错误。这就引出一个结论，我们只能使用安装代码包的方式来安装库源码文件，而不能在```go install```命令罗列并安装它们。另外，```go install```命令目前无法接受标记```-o```以自定义结果文件的存放位置。这也从侧面说明了```go install```命令当前还不支持针对库源码文件的安装操作。
 
 单从上述问题来讲，Go工具在执行错误识别及其提示信息的细分方面还没有做到最好。 
+
+
+
+## links  
+  * [目录](catalog.md)
+  * 上一节: [go build](0.1.md)
+  * 下一节: [go get](0.3.md)
