--- a/0.3.md
+++ b/0.3.md
@@ -309,3 +309,10 @@ _表0-4 ```go get```命令的特有标记说明_
 将这两个示例进行对比，我们会很容易发现它们之间的区别。第二个示例的命令执行过程中使用```git show-ref```查看所有分支和标签，当发现有匹配的信息又通过```git show-ref tags/go1 origin/go1```命令进行精确查找，在确认无误后将本地代码包的版本切换到标签“go1”之上。
 
 ```go get```命令的这一功能是非常有用的。我们的代码在直接或间接依赖某些同时针对多个Go语言版本开发的代码包时，可以自动的检出其正确的版本。也可以说，```go get```命令内置了一定的代码包多版本依赖管理的功能。 
+
+
+
+## links  
+  * [目录](catalog.md)
+  * 上一节: [go install](0.2.md)
+  * 下一节: [go clean](0.4.md)
