--- a/0.5.md
+++ b/0.5.md
@@ -127,4 +127,10 @@ _图0-2 goc2p项目中的pkgtool包的Go文档页面_
 命令```godoc```还有很多可用的标记，但在通常情况下并不常用。读者如果有兴趣，可以在命令行环境下执行```godoc```进行查看。
 
 至于怎样才能写出优秀的代码包文档，我们会在本章的第三节中详细说明。
- 
+
+
+
+## links  
+  * [目录](catalog.md)
+  * 上一节: [go clean](0.4.md)
+  * 下一节: [go run](0.6.md)
