--- a/0.7.md
+++ b/0.7.md
@@ -83,3 +83,9 @@
 
 除此之外，```go test```命令还有很多功效各异的标记。但是由于这些标记的复杂性，我们需要结合测试源码文件进行详细的讲解。所以我们把这些内容放在了本章的第二节中。
  
+
+
+  ## links  
+  * [目录](catalog.md)
+  * 上一节: [go run](0.6.md)
+  * 下一节: [go list](0.8.md)
