--- a/0.8.md
+++ b/0.8.md
@@ -563,3 +563,9 @@
 
 ```go list```命令很有用。它可以为我们提供指定代码包的更深层次的信息。这些信息往往是我们无法从源码文件中直观看到的。
 
+
+
+  ## links  
+  * [目录](catalog.md)
+  * 上一节: [go test](0.7.md)
+  * 下一节: [go fmt与gofmt](0.9.md)
