--- a/0.9.md
+++ b/0.9.md
@@ -283,3 +283,10 @@ _表0-14 ```go fmt```命令和```gofmt```命令的功能_
 	}
 
 由上述示例可知，我们可以使用```gofmt```命令的交互模式格式化任意的代码片段。虽然会显示一行警告信息，但是格式化后的结果仍然会被打印出来。并且，在交互模式下，当我们输入的代码片段不符合Go语言的语法规则时，命令程序也会打印出错误提示信息。在其它方面，命令程序在交互模式与普通模式下的行为也是基本一致的。 
+
+
+
+  ## links  
+  * [目录](catalog.md)
+  * 上一节: [go list](0.8.md)
+  * 下一节: [go fix与go tool fix](0.10.md)
