--- a/0.10.md
+++ b/0.10.md
@@ -83,3 +83,10 @@ _表0-15 ```go tool fix```命令的标记说明_
 	}
 
 上述示例的输出结果中有这样一行提示信息：“standard input: fixed netipv6zone”。其中，“standard input”表明源码是从标准输入而不是源码文件中获取的，而“fixed netipv6zone”则表示名为netipv6zone的修正操作发现输入的源码中有需要修正的地方，并且已经修正完毕。另外，我们还可以看到，输出结果中的代码已经经过了格式化。
+
+
+
+  ## links  
+  * [目录](catalog.md)
+  * 上一节: [go fmt与gofmt](0.9.md)
+  * 下一节: [go vet与go tool vet](0.11.md)
