--- a/0.4.md
+++ b/0.4.md
@@ -27,4 +27,11 @@
 	rm -f /home/hc/golang/goc2p/pkg/linux_386/logging.a
 	
 如果再加上标记```-r```又会打印出哪些命令呢？请读者自己试一试吧。
+
+
+
+## links  
+  * [目录](catalog.md)
+  * 上一节: [go get](0.3.md)
+  * 下一节: [go doc和godoc](0.5.md)
  
