--- a/0.6.md
+++ b/0.6.md
@@ -90,3 +90,8 @@
 这就是一个命令源码文件从编译到运行的全过程。请记住，```go run```命令包含了两个动作：编译命令源码文件和运行对应的可执行文件。
 
  
+
+ ## links  
+  * [目录](catalog.md)
+  * 上一节: [go doc和godoc](0.5.md)
+  * 下一节: [go test](0.7.md)
