modify some words

--- a/0.9.md
+++ b/0.9.md
@@ -1,9 +1,9 @@
 0.9 go fmt与gofmt
 
  
-```go fmt```命令会按照Go语言代码规范格式化指定的代码包中的所有Go语言源码文件的代码。所有Go语言源码文件即包括命令源码文件、库源码文件和测试源码文件。注意，当一个代码包还有子代码包时，子代码包中的Go语言源码文件是不包含在内的。也就是说，```go fmt```命令只会格式化被直接保存在指定代码包对应目录下的Go语言源码文件。
+```go fmt```命令会按照Go语言代码规范格式化指定代码包中的所有Go语言源码文件的代码，所有Go语言源码文件即包括命令源码文件、库源码文件和测试源码文件。注意，当代码包还有子代码包时，子代码包中的Go语言源码文件是不包含在内的。也就是说，```go fmt```命令只会格式化被直接保存在指定代码包对应目录下的Go语言源码文件。
 
-和```go doc```命令与```godoc```命令的关系一样，```go fmt```命令也是```gofmt```命令的一个简单的封装。```go fmt```命令本身可以接受两个标记。标记```-n```仅仅打印出内部使用的```gofmt```命令及其标记和参数而不真正执行它。 标记```-x```则既打印又这行这个命令。在```go fmt```命令程序内部，会在其调用的```gofmt```命令加上标记```-l```和```-w```，并以指定代码包中的所有Go语言源码文件的路径作为参数，就像这样：
+和```go doc```命令与```godoc```命令的关系一样，```go fmt```命令也是```gofmt```命令的简单封装。```go fmt```命令本身可以接受两个标记。标记```-n```仅仅打印出内部使用的```gofmt```命令及其标记和参数而不真正执行它。 标记```-x```则既打印又执行这个命令。在```go fmt```命令程序内部，会在其调用的```gofmt```命令加上标记```-l```和```-w```，并以指定代码包中的所有Go语言源码文件的路径作为参数，就像这样：
 
 	hc@ubt:~$ go fmt -n pkgtool
 	gofmt -l -w golang/goc2p/src/pkgtool/envir.go golang/goc2p/src pkgtoolenvir_test.go golang/goc2p/src/pkgtool/fpath.go golang/goc2p/src/pkgtool ipath.go golang/goc2p/src/pkgtool/pnode.go golang/goc2p/src/pkgtool/util.go golang/goc2p/src/pkgtool/util_test.go
