修正格式，恢复links。

--- a/0.3.md
+++ b/0.3.md
@@ -252,7 +252,7 @@ _表0-4 ```go get```命令的特有标记说明_
 			hyper-carrot/
 			go_lib/
 		...
-```
+
 我们可以看到，```go get```命令只将代码包下载到了Lib工作区（环境变量GOPATH中的第一个目录）的src目录，而没有进行后续的编译和安装动作。
 
 我们知道，绝大多数计算机编程语言在进行升级和演进过程中，不可能保证100%的向后兼容（Backward Compatibility）。在计算机世界中，向后兼容是指在一个程序或者代码库在更新到较新的版本后，用旧的版本程序创建的软件和系统仍能被正常操作或使用，或在旧版本的代码库的基础上编写的程序仍能正常编译运行的能力。Go语言的开发者们已想到了这点，并提供了官方的代码升级工具——```fix```。```fix```工具可以修复因Go语言规范变更而造成的语法级别的错误。关于fix工具，我们将放在本节的稍后位置予以说明。
@@ -265,7 +265,7 @@ _表0-4 ```go get```命令的特有标记说明_
 
 
 因为我们在之前已经检出并安装了代码包```go_lib```，所以我们执行上面这条命令后什么也没发生。还记得加入标记```-v```标记意味着会打印出被构建的代码包的名字吗？现在我们使用标记```-u```来强行更新代码包：	
-	bash
+
 	hc@ubt:~$ go get -v -u  github.com/hyper-carrot/go_lib   
 	github.com/hyper-carrot/go_lib (download)
 	github.com/hyper-carrot/go_lib/logging
@@ -308,7 +308,7 @@ _表0-4 ```go get```命令的特有标记说明_
 	
 将这两个示例进行对比，我们会很容易发现它们之间的区别。第二个示例的命令执行过程中使用```git show-ref```查看所有分支和标签，当发现有匹配的信息又通过```git show-ref tags/go1 origin/go1```命令进行精确查找，在确认无误后将本地代码包的版本切换到标签“go1”之上。
 
-```go get```命令的这一功能是非常有用的。我们的代码在直接或间接依赖某些同时针对多个Go语言版本开发的代码包时，可以自动的检出其正确的版本。也可以说，```go get```命令内置了一定的代码包多版本依赖管理的功能。 
+命令```go get```的这一功能是非常有用的。我们的代码在直接或间接依赖某些同时针对多个Go语言版本开发的代码包时，可以自动的检出其正确的版本。也可以说，```go get```命令内置了一定的代码包多版本依赖管理的功能。 
 
 
 
