加重节标题。

--- a/0.0.md
+++ b/0.0.md
@@ -1,4 +1,4 @@
-0.0 标准命令详解
+## 0.0 标准命令详解
 
 为了让讲解更具关联性，也为了让读者能够更容易的理解这些命令和工具，本教程并不会按照这些命令的字典顺序讲解它们，而会按照我们在实际开发过程中通常的使用顺序以及它们的重要程度的顺序推进说明。 我们先从```go build```命令开始。
 
