--- a/0.10.md
+++ b/0.10.md
@@ -1,4 +1,4 @@
-0.10 go fix与go tool fix
+### 0.10 go fix与go tool fix
 
  
 命令```go fix```会把指定代码包的所有Go语言源码文件中的旧版本代码修正为新版本的代码。这里所说的版本即Go语言的版本。代码包的所有Go语言源码文件不包括其子代码包（如果有的话）中的文件。修正操作包括把对旧程序调用的代码更换为对新程序调用的代码、把旧的语法更换为新的语法，等等。
