--- a/0.14.md
+++ b/0.14.md
@@ -1,4 +1,4 @@
-0.14 go env
+### 0.14 go env
 
 命令```go env```用于打印Go语言的环境信息。其中的一些信息我们在之前已经多次提及，但是却没有进行详细的说明。在本小节，我们会对这些信息进行深入介绍。我们先来看一看```go env```命令情况下都会打印出哪些Go语言通用环境信息。
 
