--- a/0.2.md
+++ b/0.2.md
@@ -1,4 +1,4 @@
-0.2 go install
+### 0.2 go install
 
 
 命令```go install```用于编译并安装指定的代码包及它们的依赖包。当指定的代码包的依赖包还没有被编译和安装时，该命令会先去处理依赖包。与```go build```命令一样，传给```go install```命令的代码包参数，应该以导入路径的形式提供。并且，```go build```命令的绝大多数标记也都可以用于```go install```命令。实际上，```go install```命令只比```go build```命令多做了一件事，即：安装编译后的结果文件到指定目录。
