--- a/0.6.md
+++ b/0.6.md
@@ -53,9 +53,9 @@
 
 通过对这些打印出来的命令的解读，我们了解了临时工作目录的用途以和内容。
 
-在上面的示例中，我们只是让```go run```命令打印出运行命令源码文件showds.go过程中需要执行的命令，而没有而没有真正运行它。如果我们想真正运行命令源码文件showds.go并且想知道临时工作目录的位置，就需要去掉标记```-n```并且加上标记```-work```。当然，如果依然想看到过程中执行的命令，可以加上标记```-x```。如果读者已经看过之前我们对```go build```命令的介绍，就应该知道标记```-x```与标记```-n```一样会打印出过程执行的命令，但不同的这些命令会被真正的执行。调整这些标记之后的命令就像这样：
+在上面的示例中，我们只是让```go run```命令打印出运行命令源码文件showds.go过程中需要执行的命令，而没有真正运行它。如果我们想真正运行命令源码文件showds.go并且想知道临时工作目录的位置，就需要去掉标记```-n```并且加上标记```-work```。当然，如果依然想看到过程中执行的命令，可以加上标记```-x```。如果读者已经看过之前我们对```go build```命令的介绍，就应该知道标记```-x```与标记```-n```一样会打印出过程执行的命令，但不同的这些命令会被真正的执行。调整这些标记之后的命令就像这样：
 
-	hc@ubt:~/golang/goc2p/src/helper/ds$ go run -v -work showds.go
+	hc@ubt:~/golang/goc2p/src/helper/ds$ go run -x -work showds.go
 	
 当命令真正执行后，临时工作目录中就会出现实实在在的内容了，像这样：
 
