--- a/0.13.md
+++ b/0.13.md
@@ -117,7 +117,7 @@ cgo也是一个Go语言自带的特殊工具。一般情况下，我们使用命
 
 	rv := C.my_bind_blob(s.stmt, C.int(i+1), unsafe.Pointer(p), C.int(len(v)))
 
-上述示例中涉及到的源码文件可以通过这个网址访问到：https://code.google.com/p/gosqlite/source/browse/sqlite/sqlite.go。有兴趣的读者可以前往查看。
+上述示例中涉及到的源码文件可以通过[这个网址](https://code.google.com/p/gosqlite/source/browse/sqlite/sqlite.go)访问到。有兴趣的读者可以前往查看。
 
 我们再来看看我们之前提到过的库源码文件print.go（位于goc2p项目的代码包```basic/cgo/lib```之中）的序文：
 
