--- a/0.5.md
+++ b/0.5.md
@@ -44,13 +44,13 @@ Go语言为程序使用示例代码设立了专有的规则。我们在这里暂
 
 	hc@ubt:~/golang/goc2p$ godoc -http=:6060
 	
-标记```-http```的值```:6060```表示启动的Web服务器使用本机的6060端口。之后，我们就可以通过在网络浏览器的地址栏中输入```http://localhost:6060```来查看以网页方式展现的Go文档了。
+标记```-http```的值```:6060```表示启动的Web服务器使用本机的6060端口。之后，我们就可以通过在网络浏览器的地址栏中输入[http://localhost:6060](http://localhost:6060)来查看以网页方式展现的Go文档了。
 
 ![本机的Go文档Web服务首页](images/0-1.jpg)
 
 _图0-1 本机的Go文档Web服务首页_
 
-这与Go语言官方站点（```http://golang.org```）的Web服务页面如出一辙。这使得我们在不方便访问Go语言官方站点的情况下也可以查看Go语言文档。并且，更便利的是，通过本机的Go文档Web服务，我们还可以查看所有本机工作区下的代码的文档。比如，goc2p项目中的代码包```pkgtool```的页面如下图：
+这与[Go语言官方站点](http://golang.org)的Web服务页面如出一辙。这使得我们在不方便访问Go语言官方站点的情况下也可以查看Go语言文档。并且，更便利的是，通过本机的Go文档Web服务，我们还可以查看所有本机工作区下的代码的文档。比如，goc2p项目中的代码包```pkgtool```的页面如下图：
 
 ![goc2p项目中的pkgtool包的Go文档页面](images/0-2.jpg)
 
