--- a/0.8.md
+++ b/0.8.md
@@ -22,7 +22,7 @@
 
 标记```-e```的作用是以容错模式加载和分析指定的代码包。在这种情况下，命令程序如果在加载或分析的过程中遇到错误只会在内部记录一下，而不会直接把错误信息打印出来。我们为了看到错误信息可以使用```-json```标记。这个标记的作用是把代码包的结构体实例用JSON的样式打印出来。
 
-这里解释一下，JSON的全称是Javascript Object Notation。它一种轻量级的承载数据的格式。JSON的优势在于语法简单、短小精悍，且非常易于处理。JSON还是一种纯文本格式，独立于编程语言。正因为如此，得到了绝大多数编程语言和浏览器的支持，应用非常广泛。Go语言当然也不例外，在它的标准库中有专门用于处理和转换JSON格式的数据的代码包```encoding/json```。关于JSON格式的具体内容，读者可以去它的官方网站查看说明：```http://www.json.org```。
+这里解释一下，JSON的全称是Javascript Object Notation。它一种轻量级的承载数据的格式。JSON的优势在于语法简单、短小精悍，且非常易于处理。JSON还是一种纯文本格式，独立于编程语言。正因为如此，得到了绝大多数编程语言和浏览器的支持，应用非常广泛。Go语言当然也不例外，在它的标准库中有专门用于处理和转换JSON格式的数据的代码包```encoding/json```。关于JSON格式的具体内容，读者可以去它的[官方网站](http://www.json.org)查看说明。
 
 在了解了这些基本概念之后，我们来试用一下```-json```标记。示例如下：
 
