增强第一段。

--- a/0.5.md
+++ b/0.5.md
@@ -1,8 +1,8 @@
 ### 0.5 godoc
 
-命令```godoc```是一个很强大的工具。它有两种模式可供选择。
+命令```godoc```是一个很强大的工具，用于展示指定代码包的文档。我们可以通过运行```go get code.google.com/p/go.tools/cmd/godoc```安装它。
 
-如果在执行命令时不加入```-http```标记，则该命令就以命令行模式运行。在打印纯文本格式的文档到标准输出后，命令执行就结束了。比如，我们用命令行模式查看代码包fmt的文档：
+该命令有两种模式可供选择。如果在执行命令时不加入```-http```标记，则该命令就以命令行模式运行。在打印纯文本格式的文档到标准输出后，命令执行就结束了。比如，我们用命令行模式查看代码包fmt的文档：
 
 	hc@ubt:~$ godoc fmt
 	
@@ -78,7 +78,7 @@ _图0-2 goc2p项目中的pkgtool包的Go文档页面_
 	
 命令```godoc```还有很多可用的标记，但在通常情况下并不常用。读者如果有兴趣，可以在命令行环境下执行```godoc```进行查看。
 
-至于怎样才能写出优秀的代码包文档，我们会在本章的第三节中详细说明。
+至于怎样才能写出优秀的代码包文档，我在《Go并发编程实战》的5.2节中做了详细说明。
 
 
 
