Improve 0.6 go run
Improve the behavior description of the command 'go run'.

--- a/0.6.md
+++ b/0.6.md
@@ -12,7 +12,7 @@
 	
 在上面的示例中，我们使用```go run```命令运行命令源码文件showds.go。这个命令源码文件可以接受一个名称为“p”的参数。我们用“-p”这种形式表示“p”是一个参数名而不是参数值。它与源码文件名之间需要用空格隔开。参数值会放在参数名的后面，两者成对出现。它们之间也要用空格隔开。如果有第二个参数，那么第二个参数的参数名与第一个参数的参数值之间也要有一个空格。以此类推。
 
-```go run```命令只接受命令源码文件作为参数，而不能接受测试源码文件和库源码文件。它在执行时如果参数中包含源码文件，那么紧接着就会检查源码文件的类型。如果其中包含了非命令源码文件，命令就会在打印错误提示信息后退出。当然，如果参数中没有源码文件，```go run```命令也只会打印错误提示信息并退出，而不会继续执行。
+```go run```命令只能接受一个命令源码文件以及若干个库源码文件（需同属于```main包```）作为文件参数，且不能接受测试源码文件。它在执行时会检查源码文件的类型。如果参数中有多个或者没有命令源码文件，那么```go run```命令就只会打印错误提示信息并退出，而不会继续执行。
 
 在通过参数检查后，```go run```命令会将编译参数中的命令源码文件，并把编译后的可执行文件存放到临时工作目录中。
 
