--- a/0.1.md
+++ b/0.1.md
@@ -42,7 +42,7 @@
 
 我们在执行命令```go build -v initpkg_demo.go ```之后被打印出的“command-line-arguments”就是命令程序为命令源码文件initpkg_demo.go生成的虚拟代码包的包名。
 
-```go build```命令会把编译命令源码文件后生成的结果文件存放到执行该命令时所在的目录下。这个所说的结果文件就是与命令源码文件对应的可执行文件。它的名称会与命令源码文件的主文件名相同。
+```go build```命令会把编译命令源码文件后生成的结果文件存放到执行该命令时所在的目录下。这个所说的结果文件就是与命令源码文件对应的可执行文件。它的名称会与命令源码文件的所在的文件夹名相同。
 
 我们可以自定义生成的可执行文件的名字，示例如下：
 
