--- a/0.10.md
+++ b/0.10.md
@@ -1,4 +1,4 @@
-### 0.10 go fix与go tool fix
+# go fix与go tool fix
 
  
 命令```go fix```会把指定代码包的所有Go语言源码文件中的旧版本代码修正为新版本的代码。这里所说的版本即Go语言的版本。代码包的所有Go语言源码文件不包括其子代码包（如果有的话）中的文件。修正操作包括把对旧程序调用的代码更换为对新程序调用的代码、把旧的语法更换为新的语法，等等。
@@ -83,10 +83,3 @@ _表0-15 ```go tool fix```命令的标记说明_
 	}
 
 上述示例的输出结果中有这样一行提示信息：“standard input: fixed netipv6zone”。其中，“standard input”表明源码是从标准输入而不是源码文件中获取的，而“fixed netipv6zone”则表示名为netipv6zone的修正操作发现输入的源码中有需要修正的地方，并且已经修正完毕。另外，我们还可以看到，输出结果中的代码已经经过了格式化。
-
-
-
-## links  
-  * [目录](catalog.md)
-  * 上一节: [go fmt与gofmt](0.9.md)
-  * 下一节: [go vet与go tool vet](0.11.md)
