--- a/0.3.md
+++ b/0.3.md
@@ -1,9 +1,8 @@
-### 0.3 go get
-
+# go get
 
 
 	hc@ubt:~$ go get github.com/hyper-carrot/go_lib
-	
+
 
 命令```go get```可以根据要求和实际情况从互联网上下载或更新指定的代码包及其依赖包，并对它们进行编译和安装。在上面这个示例中，我们从著名的代码托管站点Github上下载了一个项目（或称代码包），并安装到了环境变量GOPATH中包含的第一个工作区中。在本机中，这个代码包的导入路径就是github.com/hyper-carrot/go_lib。
 
@@ -309,10 +308,3 @@ _表0-4 ```go get```命令的特有标记说明_
 将这两个示例进行对比，我们会很容易发现它们之间的区别。第二个示例的命令执行过程中使用```git show-ref```查看所有分支和标签，当发现有匹配的信息又通过```git show-ref tags/go1 origin/go1```命令进行精确查找，在确认无误后将本地代码包的版本切换到标签“go1”之上。
 
 命令```go get```的这一功能是非常有用的。我们的代码在直接或间接依赖某些同时针对多个Go语言版本开发的代码包时，可以自动的检出其正确的版本。也可以说，```go get```命令内置了一定的代码包多版本依赖管理的功能。 
-
-
-
-## links  
-  * [目录](catalog.md)
-  * 上一节: [go install](0.2.md)
-  * 下一节: [go clean](0.4.md)
