--- a/0.4.md
+++ b/0.4.md
@@ -1,4 +1,4 @@
-### 0.4 go clean
+# go clean
 
 
 执行```go clean```命令会删除掉执行其它命令时产生的一些文件和目录，包括：
@@ -27,11 +27,3 @@
 	rm -f /home/hc/golang/goc2p/pkg/linux_386/logging.a
 	
 如果再加上标记```-r```又会打印出哪些命令呢？请读者自己试一试吧。
-
-
-
-## links  
-  * [目录](catalog.md)
-  * 上一节: [go get](0.3.md)
-  * 下一节: [godoc](0.5.md)
- 
