--- a/0.6.md
+++ b/0.6.md
@@ -1,4 +1,4 @@
-### 0.6 go run
+# go run
 
  
 
@@ -88,10 +88,3 @@
 可见，```go run```命令会把追加到命令源码文件后面的参数原封不动的传给对应的可执行文件。
 
 这就是一个命令源码文件从编译到运行的全过程。请记住，```go run```命令包含了两个动作：编译命令源码文件和运行对应的可执行文件。
-
- 
-
-## links  
-  * [目录](catalog.md)
-  * 上一节: [godoc](0.5.md)
-  * 下一节: [go test](0.7.md)
