--- a/0.7.md
+++ b/0.7.md
@@ -1,4 +1,4 @@
-### 0.7 go test
+# go test
 
 
 
@@ -82,10 +82,3 @@
 上述这两个标记可以搭配使用。搭配使用的目的就是让```go test```命令既安装依赖包又编译测试代码，但不运行测试。也就是说，让命令程序跑一遍运行测试之前的所有流程。这可以测试一下测试过程。需要注意的是，在加入```-c```标记后，命令程序在编译测试代码并生成用于运行测试的一系列文件之后会把临时工作目录及其下的所有内容一并删除。如果想在命令执行结束后再去查看这些内容的话，我们还需要加入```-work```标记。
 
 除此之外，```go test```命令还有很多功效各异的标记。但是由于这些标记的复杂性，我们需要结合测试源码文件进行详细的讲解。所以我们把这些内容放在了本章的第二节中。
- 
-
-
-## links  
-  * [目录](catalog.md)
-  * 上一节: [go run](0.6.md)
-  * 下一节: [go list](0.8.md)
