--- a/0.8.md
+++ b/0.8.md
@@ -1,4 +1,4 @@
-### 0.8 go list
+# go list
 
  
 ```go list```命令的作用是列出指定的代码包的信息。与其他命令相同，我们需要以代码包导入路径的方式给定代码包。被给定的代码包可以有多个。这些代码包对应的目录中必须直接保存有Go语言源码文件，其子目录中的文件不算在内。否则，代码包将被看做是不完整的。现在我们来试用一下：
@@ -562,10 +562,3 @@
 另外，```-tags```标记也可以被```go list```接受。它与我们在讲```go build```命令时提到的```-tags```标记是一致的。读者可以查看代码包```go/build``的文档以了解细节。 
 
 ```go list```命令很有用。它可以为我们提供指定代码包的更深层次的信息。这些信息往往是我们无法从源码文件中直观看到的。
-
-
-
-## links  
-  * [目录](catalog.md)
-  * 上一节: [go test](0.7.md)
-  * 下一节: [go fmt与gofmt](0.9.md)
