--- a/0.5.md
+++ b/0.5.md
@@ -1,4 +1,4 @@
-### 0.5 godoc
+# godoc
 
 命令```godoc```是一个很强大的工具，用于展示指定代码包的文档。我们可以通过运行```go get code.google.com/p/go.tools/cmd/godoc```安装它。
 
@@ -79,10 +79,3 @@ _图0-2 goc2p项目中的pkgtool包的Go文档页面_
 命令```godoc```还有很多可用的标记，但在通常情况下并不常用。读者如果有兴趣，可以在命令行环境下执行```godoc```进行查看。
 
 至于怎样才能写出优秀的代码包文档，我在《Go并发编程实战》的5.2节中做了详细说明。
-
-
-
-## links  
-  * [目录](catalog.md)
-  * 上一节: [go clean](0.4.md)
-  * 下一节: [go run](0.6.md)
